Added post form with mock functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-primary bg-primary">
+  <h1 class="navbar-brand mb-0">{{title}}</h1>
+</nav>
 
-<app-chrip-list></app-chrip-list>
+<br>
+
+<div class="container">
+  <app-chirp-form></app-chirp-form>
+  <app-chrip-list></app-chrip-list>
+</div>
