--- a/src/app/chirp-form/chirp-form.component.html
+++ b/src/app/chirp-form/chirp-form.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="card card-block">
     <h4 class="card-title">{{ callToAction }}</h4>
-    <textarea  class="form-control" rows="3" [(ngModel)]="chirp.body" placeholder="{{placeholder}}" required></textarea>
+    <textarea
+      class="form-control"
+      rows="3"
+      [(ngModel)]="chirp.body"
+      placeholder="{{placeholder}}"
+      required>
+    </textarea>
     <br>
     <button class="btn btn-primary" (click)="pushChirp()">Chirp</button>
+    <label id="countdown"> {{ chirp.body | countdown:140 }} characters remaining</label>
   </div>
 </div>
