Added date display to chirps

--- a/src/app/chirp-form/chirp-form.component.html
+++ b/src/app/chirp-form/chirp-form.component.html
@@ -17,7 +17,7 @@
         {{ formErrors.body }}
       </div>
       <button type="submit" class="btn btn-primary">{{ buttonText }}</button>
-      <label id="countdown">{{ body | countdown:140 }}{{ charactersLabel }}</label>
+      <label class="countdown">{{ body | countdown:140 }}{{ charactersLabel }}</label>
     </form>
   </div>
 </div>
