--- a/src/app/chirp-list/chirp-list.component.html
+++ b/src/app/chirp-list/chirp-list.component.html
@@ -1,9 +1,9 @@
-<div class="row" *ngFor="let chirp of chirps">
+<div class="row slideDown" *ngFor="let chirp of chirps">
   <div class="card card-block">
     <h4 class="card-title">{{ chirp.userName }}</h4>
     <p class="card-text">{{ chirp.body }}</p>
     <a href="#" class="card-link">ReChirp</a>
     <a href="#" class="card-link">Reply</a>
-    <span class="timeAgo">{{ chirp.date | timeago }}</span>
+    <span class="timeAgo">Chirped {{ chirp.date | timeago }}</span>
   </div>
 </div>
