--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <nav class="navbar navbar-primary bg-primary">
   <h1 class="navbar-brand mb-0">{{title}}</h1>
+  <button *ngIf="userService.isLoggedIn()" (click)="userService.logOut()" class="btn btn-primary">Logout</button>
 </nav>
 
 <br>
 
-<div class="container">
+<div *ngIf="!userService.isLoggedIn()" class="container">
+  <app-login-form></app-login-form>
+  <app-register-form></app-register-form>
+</div>
+
+<br>
+
+<div *ngIf="userService.isLoggedIn()" class="container">
   <app-chirp-form></app-chirp-form>
   <app-chrip-list></app-chrip-list>
 </div>
