Add proper server loggin and cleanup a bit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-primary bg-primary">
+<nav class="navbar navbar-light bg-primary">
   <h1 class="navbar-brand mb-0">{{title}}</h1>
   <button *ngIf="userService.isLoggedIn()" (click)="userService.logOut()" class="btn btn-primary">Logout</button>
 </nav>
