--- a/src/app/chirp-list/chirp-list.component.html
+++ b/src/app/chirp-list/chirp-list.component.html
@@ -1,3 +1,4 @@
+<app-chirp-form></app-chirp-form>
 <div class="row slideDown" *ngFor="let chirp of chirps">
   <div class="card card-block">
     <h4 class="card-title">{{ chirp.userName }}</h4>
