--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,30 @@
-<nav class="navbar navbar-light bg-primary">
-  <h1 class="navbar-brand mb-0">{{title}}</h1>
-  <div *ngIf="!userService.isLoggedIn()">
-    <a routerLink="/login" routerLinkActive="active" class="btn btn-primary">Login</a>
-    <a routerLink="/register" routerLinkActive="active" class="btn btn-primary">Register</a>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="/">{{title}}</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+        <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
+      </li>
+      <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+        <a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a>
+      </li>
+      <li *ngIf="userService.isLoggedIn()" class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <div *ngIf="userService.isLoggedIn()" class="nav-item dropdown ml-auto">
+      <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{userService.getCurrentUser().name}}
+      </a>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="#">Profile</a>
+        <a class="dropdown-item" href="#" (click)="userService.logOut()">Logout</a>
+      </div>
+    </div>
   </div>
-  <a *ngIf="userService.isLoggedIn()" (click)="userService.logOut()" active="true" class="btn btn-primary">Logout</a>
 </nav>
 <br>
 <div class="container">
