--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">{{title}}</a>
+  <a class="navbar-brand" routerLink="/" routerLinkActive="active">{{title}}</a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item" *ngIf="!userService.isLoggedIn()">
-        <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
+        <a routerLink="/login" routerLinkActive="active" class="nav-link active">Login</a>
       </li>
       <li class="nav-item" *ngIf="!userService.isLoggedIn()">
         <a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a>
       </li>
       <li *ngIf="userService.isLoggedIn()" class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
       </li>
     </ul>
     <div *ngIf="userService.isLoggedIn()" class="nav-item dropdown ml-auto">
