--- a/src/app/chirp-list/chirp-list.component.html
+++ b/src/app/chirp-list/chirp-list.component.html
@@ -4,8 +4,8 @@
     <div class="card-block">
       <h4 class="card-title">{{ chirp.user.name }}</h4>
       <p class="card-text">{{ chirp.body }}</p>
-      <a href="#" class="btn btn-secondary btn-inline">ReChirp</a>
-      <a href="#" class="btn btn-secondary btn-inline">Reply</a>
+      <a href="#" class="btn btn-outline-primary btn-inline">ReChirp</a>
+      <a href="#" class="btn btn-outline-primary btn-inline">Reply</a>
       <span class="timeAgo">Chirped {{ chirp.date | timeago }}</span>
     </div>
   </div>
