--- a/src/app/chirp-list/chirp-list.component.html
+++ b/src/app/chirp-list/chirp-list.component.html
@@ -1,12 +1,17 @@
 <app-chirp-form></app-chirp-form>
-<div class="row slideDown" *ngFor="let chirp of chirps">
-  <div class="card w-100">
-    <div class="card-block">
-      <h4 class="card-title">{{ chirp.user.name }}</h4>
-      <p class="card-text">{{ chirp.body }}</p>
-      <a href="#" class="btn btn-outline-primary btn-inline">ReChirp</a>
-      <a href="#" class="btn btn-outline-primary btn-inline">Reply</a>
-      <span class="timeAgo">Chirped {{ chirp.date | timeago }}</span>
+<div id="chirp-list"> 
+  <div class="row slideDown" *ngFor="let chirp of chirps">
+    <div class="card w-100">
+      <div class="card-block">
+        <h4 class="card-title">{{ chirp.user.name }}</h4>
+        <p class="card-text">{{ chirp.body }}</p>
+        <!--
+        <a href="#" class="btn btn-outline-primary btn-inline">ReChirp</a>
+        <a href="#" class="btn btn-outline-primary btn-inline">Reply</a>
+        <a href="#" class="btn btn-outline-primary btn-inline">💙</a>
+        -->
+        <span class="timeAgo">Chirped {{ chirp.date | timeago }}</span>
+      </div>
     </div>
   </div>
 </div>
