Remove profile button until it's functional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         {{userService.getCurrentUser().name}}
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="#">Profile</a>
+        <!-- <a class="dropdown-item" href="#">Profile</a> -->
         <a class="dropdown-item" href="#" (click)="userService.logOut()">Logout</a>
       </div>
     </div>
