Fix aot compile issues

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!userService.isLoggedIn()" class="row">
+<div *ngIf="!isLoggedIn()" class="row">
   <div class="card card-block">
     <form #loginForm="ngForm" (ngSubmit)="onSubmit($event)">
       <h4 class="card-title">{{ callToAction }}</h4>
