--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,19 @@
   <a class="navbar-brand" routerLink="/" routerLinkActive="active">{{title}}</a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+      <li class="nav-item" *ngIf="!isLoggedIn()">
         <a routerLink="/login" routerLinkActive="active" class="nav-link active">Login</a>
       </li>
-      <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+      <li class="nav-item" *ngIf="!isLoggedIn()">
         <a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a>
       </li>
-      <li *ngIf="userService.isLoggedIn()" class="nav-item active">
+      <li *ngIf="isLoggedIn()" class="nav-item active">
         <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
       </li>
     </ul>
-    <div *ngIf="userService.isLoggedIn()" class="nav-item dropdown ml-auto">
+    <div *ngIf="isLoggedIn()" class="nav-item dropdown ml-auto">
       <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        {{userService.getCurrentUser().name}}
+        {{getCurrentUser().name}}
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
         <!-- <a class="dropdown-item" href="#">Profile</a> -->
