--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,12 +16,12 @@
       </li>
     </ul>
     <div *ngIf="isLoggedIn()" class="nav-item dropdown ml-auto">
-      <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{getCurrentUser().name}}
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
         <!-- <a class="dropdown-item" href="#">Profile</a> -->
-        <a class="dropdown-item" href="#" (click)="userService.logOut()">Logout</a>
+        <a class="dropdown-item" href="#" (click)="logOut()">Logout</a>
       </div>
     </div>
   </div>
