Added links between register and login

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -38,6 +38,9 @@
 
         <button type="submit" class="btn btn-primary">{{ buttonText }}</button>
       </form>
+
+      <br>
+      <span class="alert alert-info" role="alert">If you don't have an account you can <a routerLink="/register">register here.</a></span>
     </div>
   </div>
 </div>
