--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -48,6 +48,9 @@
 
         <button type="submit" class="btn btn-primary">{{ buttonText }}</button>
       </form>
+
+      <br>
+      <span class="alert alert-info" role="alert">If you already have an account you can <a routerLink="/login">login here.</a></span>
     </div>
   </div>
 </div>
