Fixed aot build issue

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -27,8 +27,8 @@
             [(ngModel)]="password"
             #name="ngModel"
             required>
-          <div *ngIf="formErrors.body" class="alert alert-danger">
-            {{ formErrors.body }}
+          <div *ngIf="formErrors.password" class="alert alert-danger">
+            {{ formErrors.password }}
           </div>
         </div>
 
